# RawDogML

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: dataset.cpp  dataset.h  main.cpp  neuralnetwork.cpp  neuralnetwork.h  statedict.cpp  statedict.h  tensor.cpp  tensor.h  types.h
